--- a/referências.html
+++ b/referências.html
@@ -380,26 +380,17 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <div id="referências" class="section level1 unnumbered hasAnchor">
 <h1>Referências<a href="referências.html#referências" class="anchor-section" aria-label="Anchor link to header"></a></h1>
 <p><a name=bib-Almeida_2002></a><a href="#cite-Almeida_2002">Almeida, M.</a> (2002).
-“Uma introdu{c”c~ao ao XML, sua utiliza{cc~ao na Internet e alguns
-conceitos complementares. In: <em>Ci. Inf., Bras'ilia</em> 31.2, pp. 5-13.</p>
+“Uma introdução ao XML, sua utilização na Internet e alguns conceitos
+complementares”. In: <em>Ci. Inf., Bras'ilia</em> 31.2, pp. 5-13.</p>
 <p><a
 name=bib-TrendsandPriorities></a><a href="#cite-TrendsandPriorities">Anônimo</a>
 (1974). “Trends, Priorities, and Needs in Systematic and Evolutionary
-Biology”. In: <em>Systematic Biology</em> 23.3, pp. 416-439. ISSN: 1063-5157.
-DOI:
-<a href="https://doi.org/10.1093%2Fsysbio%2F23.3.416">10.1093/sysbio/23.3.416</a>.
-eprint:
-<a href="https://academic.oup.com/sysbio/article-pdf/23/3/416/4672840/23-3-416.pdf" class="uri">https://academic.oup.com/sysbio/article-pdf/23/3/416/4672840/23-3-416.pdf</a>.
-URL:
+Biology”. In: <em>Systematic Biology</em> 23.3, pp. 416-439. URL:
 <a href="https://doi.org/10.1093/sysbio/23.3.416">https://doi.org/10.1093/sysbio/23.3.416</a>.</p>
 <p><a name=bib-Cornish-Bowden></a><a href="#cite-Cornish-Bowden">Cornish-Bowden,
 A.</a> (1985). “Nomenclature for incompletely
 specified bases in nucleic acid sequences: recommendations 1984”. In:
-<em>Nucleic Acids Research</em> 13.9, pp. 3021-3030. ISSN: 0305-1048. DOI:
-<a href="https://doi.org/10.1093%2Fnar%2F13.9.3021">10.1093/nar/13.9.3021</a>.
-eprint:
-<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC322779/pdf/pnas00305-0018.pdf" class="uri">https://www.ncbi.nlm.nih.gov/pmc/articles/PMC322779/pdf/pnas00305-0018.pdf</a>.
-URL:
+<em>Nucleic Acids Research</em> 13.9, pp. 3021-3030. URL:
 <a href="https://doi.org/10.1093/nar/13.9.3021">https://doi.org/10.1093/nar/13.9.3021</a>.</p>
 <p><a name=bib-Cracraft></a><a href="#cite-Cracraft">Cracraft, J.</a> (2002a). “The
 Seven Great Questions of Systematic Biology: An Essential Foundation
@@ -411,22 +402,17 @@ of the Missouri Botanical Garden</em> 89, pp. 127-144. URL:
 leaf tissue”. In: <em>Phytochemical Bulletin</em> 19, pp. 11-15.</p>
 <p><a name=bib-Eshbaugh></a><a href="#cite-Eshbaugh">Eshbaugh, W. H.</a> (1995).
 “Systematics Agenda 2000: an historical perspective”. In: <em>Biodiversity
-&amp; Conservation</em> 4.5, pp. 455-462. ISSN: 1572-9710. DOI:
-<a href="https://doi.org/10.1007%2FBF00056336">10.1007/BF00056336</a>. URL:
+&amp; Conservation</em> 4.5, pp. 455-462. URL:
 <a href="https://doi.org/10.1007/BF00056336">https://doi.org/10.1007/BF00056336</a>.</p>
 <p><a name=bib-Gastauer2017></a><a href="#cite-Gastauer2017">Gastauer, M. and J. A. A. M.
 Neto</a> (2017). “Updated angiosperm family tree for
 analyzing phylogenetic diversity and community structure”. In: <em>Acta
-Botanica Brasilica</em> 31.2, pp. 191-198. DOI:
-<a href="https://doi.org/10.1590%2F0102-33062016abb0306">10.1590/0102-33062016abb0306</a>.
-URL:
+Botanica Brasilica</em> 31.2, pp. 191-198. URL:
 <a href="https://doi.org/10.1590/0102-33062016abb0306">https://doi.org/10.1590/0102-33062016abb0306</a>.</p>
 <p><a name=bib-Hagemann1999></a><a href="#cite-Hagemann1999">Hagemann, T. L. and S.
 Kwan</a> (1999). “ABISequencing Analysis: Manipulation
 of Sequence Data from the ABIDNASequencer”. In: <em>Molecular
-Biotechnology</em> 13.2, pp. 137-152. DOI:
-<a href="https://doi.org/10.1385%2Fmb%3A13%3A2%3A137">10.1385/mb:13:2:137</a>.
-URL:
+Biotechnology</em> 13.2, pp. 137-152. URL:
 <a href="https://doi.org/10.1385/mb:13:2:137">https://doi.org/10.1385/mb:13:2:137</a>.</p>
 <p><a name=bib-Hall></a><a href="#cite-Hall">Hall, T. A.</a> (1999). “BioEdit: a
 user-friendly biological sequence alignment editor and analysis program
@@ -434,21 +420,11 @@ for Windows 95/98/NT”. In: <em>Nucleic Acids Symposium Series</em> 41, pp.
 95-98.</p>
 <p><a name=bib-Huelsenbeck></a><a href="#cite-Huelsenbeck">Huelsenbeck, J. P. and F.
 Ronquist</a> (2001). “MRBAYES: Bayesian inference of
-phylogenetic trees”. In: <em>Bioinformatics</em> 17.8, pp. 754-755. ISSN:
-1367-4803. DOI:
-<a href="https://doi.org/10.1093%2Fbioinformatics%2F17.8.754">10.1093/bioinformatics/17.8.754</a>.
-eprint:
-<a href="https://academic.oup.com/bioinformatics/article-pdf/17/8/754/8201380/170754.pdf" class="uri">https://academic.oup.com/bioinformatics/article-pdf/17/8/754/8201380/170754.pdf</a>.
-URL:
+phylogenetic trees”. In: <em>Bioinformatics</em> 17.8, pp. 754-755. URL:
 <a href="https://doi.org/10.1093/bioinformatics/17.8.754">https://doi.org/10.1093/bioinformatics/17.8.754</a>.</p>
 <p><a name=bib-Huson></a><a href="#cite-Huson">Huson, D. H. and D. Bryant</a> (2005).
 “Application of Phylogenetic Networks in Evolutionary Studies”. In:
-<em>Molecular Biology and Evolution</em> 23.2, pp. 254-267. ISSN: 0737-4038.
-DOI:
-<a href="https://doi.org/10.1093%2Fmolbev%2Fmsj030">10.1093/molbev/msj030</a>.
-eprint:
-<a href="https://academic.oup.com/mbe/article-pdf/23/2/254/3894375/msj030.pdf" class="uri">https://academic.oup.com/mbe/article-pdf/23/2/254/3894375/msj030.pdf</a>.
-URL:
+<em>Molecular Biology and Evolution</em> 23.2, pp. 254-267. URL:
 <a href="https://doi.org/10.1093/molbev/msj030">https://doi.org/10.1093/molbev/msj030</a>.</p>
 <p><a name=bib-Inglis></a><a href="#cite-Inglis">Inglis, P. W., M. d. C. R. Pappas, L. V.
 Resende, et al.</a> (2018). “Fast and inexpensive protocols
@@ -459,45 +435,29 @@ sequencing applications”. En. In: <em>PLoS One</em> 13.10, p. e0206085.</p>
 et al.</a> (2018). “A Universal Probe Set for Targeted
 Sequencing of 353 Nuclear Genes from Any Flowering Plant Designed Using
 k-Medoids Clustering”. In: <em>Systematic Biology</em> 68.4. Ed. by S. Renner,
-pp. 594-606. DOI:
-<a href="https://doi.org/10.1093%2Fsysbio%2Fsyy086">10.1093/sysbio/syy086</a>.
-URL:
+pp. 594-606. URL:
 <a href="https://doi.org/10.1093/sysbio/syy086">https://doi.org/10.1093/sysbio/syy086</a>.</p>
 <p><a name=bib-Li2021></a><a href="#cite-Li2021">Li, H., Y. Luo, L. Gan, et al.</a>
 (2021). “Plastid phylogenomic insights into relationships of all
-flowering plant families”. In: <em>BMC Biology</em> 19.1. DOI:
-<a href="https://doi.org/10.1186%2Fs12915-021-01166-2">10.1186/s12915-021-01166-2</a>.
-URL:
+flowering plant families”. In: <em>BMC Biology</em> 19.1. URL:
 <a href="https://doi.org/10.1186/s12915-021-01166-2">https://doi.org/10.1186/s12915-021-01166-2</a>.</p>
 <p><a name=bib-Luz2014></a><a href="#cite-Luz2014">Luz, M. T.</a> (2014). “Impactos
 da tecnociência nos saberes, na cultura da vida e saúde”. In: <em>Forum
-Sociológico</em> 24, pp. 27-32. DOI:
-<a href="https://doi.org/10.4000%2Fsociologico.1007">10.4000/sociologico.1007</a>.
-URL:
+Sociológico</em> 24, pp. 27-32. URL:
 <a href="https://doi.org/10.4000/sociologico.1007">https://doi.org/10.4000/sociologico.1007</a>.</p>
 <p><a name=bib-Maddison></a><a href="#cite-Maddison">Maddison, D. R., D. L. Swofford, and W. P.
 Maddison</a> (1997). “Nexus: An Extensible File Format for
 Systematic Information”. In: <em>Systematic Biology</em> 46.4, pp. 590-621.
-ISSN: 1063-5157. DOI:
-<a href="https://doi.org/10.1093%2Fsysbio%2F46.4.590">10.1093/sysbio/46.4.590</a>.
-eprint:
-<a href="https://academic.oup.com/sysbio/article-pdf/46/4/590/19502018/46-4-590.pdf" class="uri">https://academic.oup.com/sysbio/article-pdf/46/4/590/19502018/46-4-590.pdf</a>.
 URL:
 <a href="https://doi.org/10.1093/sysbio/46.4.590">https://doi.org/10.1093/sysbio/46.4.590</a>.</p>
 <p><a name=bib-Muller></a><a href="#cite-Muller">Müller, K.</a> (2005). “SeqState:
 Primer Design and Sequence Statistics for Phylogenetic DNA Datasets”.
-In: <em>Applied Bioinformatics</em> 4.1, pp. 65-69. ISSN: 1175-5636. DOI:
-<a href="https://doi.org/10.2165%2F00822942-200504010-00008">10.2165/00822942-200504010-00008</a>.
-URL:
+In: <em>Applied Bioinformatics</em> 4.1, pp. 65-69. URL:
 <a href="https://doi.org/10.2165/00822942-200504010-00008">https://doi.org/10.2165/00822942-200504010-00008</a>.</p>
 <p><a name=bib-Piel></a><a href="#cite-Piel">Piel, W. H., M. J. Sanderson, and M. J.
 Donoghue</a> (2003). “The small-world dynamics of tree
 networks and data mining in phyloinformatics”. In: <em>Bioinformatics</em>
-19.9, pp. 1162-1168. ISSN: 1367-4803. DOI:
-<a href="https://doi.org/10.1093%2Fbioinformatics%2Fbtg131">10.1093/bioinformatics/btg131</a>.
-eprint:
-<a href="https://academic.oup.com/bioinformatics/article-pdf/19/9/1162/801444/btg131.pdf" class="uri">https://academic.oup.com/bioinformatics/article-pdf/19/9/1162/801444/btg131.pdf</a>.
-URL:
+19.9, pp. 1162-1168. URL:
 <a href="https://doi.org/10.1093/bioinformatics/btg131">https://doi.org/10.1093/bioinformatics/btg131</a>.</p>
 <p><a name=bib-ePING></a><a href="#cite-ePING">Programa de Governo Eletrônico
 Brasileiro</a> (2022). <em>PadrÃµes de Interoperabilidade de
@@ -507,30 +467,22 @@ Governo EletrÃ´nico - ePING - VersÃ£o 2018</em>. [Online; accessed
 <p><a name=bib-Sanderson></a><a href="#cite-Sanderson">Sanderson, M. J., B. G. Baldwin, G.
 Bharathan, et al.</a> (1993). “The Growth of Phylogenetic
 Information and the Need for a Phylogenetic Data Base”. In: <em>Systematic
-Biology</em> 42.4, pp. 562-568. ISSN: 1063-5157. DOI:
-<a href="https://doi.org/10.1093%2Fsysbio%2F42.4.562">10.1093/sysbio/42.4.562</a>.
-eprint:
-<a href="https://academic.oup.com/sysbio/article-pdf/42/4/562/4662342/42-4-562.pdf" class="uri">https://academic.oup.com/sysbio/article-pdf/42/4/562/4662342/42-4-562.pdf</a>.
-URL:
+Biology</em> 42.4, pp. 562-568. URL:
 <a href="https://doi.org/10.1093/sysbio/42.4.562">https://doi.org/10.1093/sysbio/42.4.562</a>.</p>
 <p><a name=bib-Santos2008></a><a href="#cite-Santos2008">Santos, C. M. D.</a> (2008).
 “Os dinossauros de Hennig: sobre a importância do monofiletismo para a
 sistemática biológica”. In: <em>Scientiae Studia [online]</em> 2.6, pp.
-179-200. DOI:
-<a href="https://doi.org/10.4000%2Fsociologico.1007">10.4000/sociologico.1007</a>.
-URL:
+179-200. URL:
 <a href="https://doi.org/10.1590/S1678-31662008000200003">https://doi.org/10.1590/S1678-31662008000200003</a>.</p>
 <p><a name=bib-Santos_Klassa2012></a><a href="#cite-Santos_Klassa2012">Santos, C. M. D. and B.
-Klassa</a> (2012). “Sistem'atica filogen'etica
-hennigiana: revolu{c”c~ao ou mudan{cca no interior de um paradigma?
-In: <em>Scientiae Studia [online]</em> 10.3, pp. 593-612. DOI:
-<a href="https://doi.org/10.4000%2Fsociologico.1007">10.4000/sociologico.1007</a>.
-URL:
+Klassa</a> (2012). “Sistemática filogenética
+hennigiana: revolução ou mudança no interior de um paradigma?” In:
+<em>Scientiae Studia [online]</em> 10.3, pp. 593-612. URL:
 <a href="https://doi.org/10.1590/S1678-31662012000300008">https://doi.org/10.1590/S1678-31662012000300008</a>.</p>
 <p><a name=bib-Souza_Alvarenga_2004></a><a href="#cite-Souza_Alvarenga_2004">Souza, R. and L.
-Alvarenga</a> (2004). “A Web Sem^antica e
-suas contribui{c”c~oes para a ci^encia da informa{cc~ao. In: <em>Ci.
-Inf., Bras'ilia</em> 33.1, pp. 132-141.</p>
+Alvarenga</a> (2004). “A Web Semântica e suas
+contribuições para a ciência da informação”. In: <em>Ci. Inf., Bras'ilia</em>
+33.1, pp. 132-141.</p>
 <p><a name=bib-Terra2010></a><a href="#cite-Terra2010">Terra, P. S.</a> (2010). “O
 triunfo da clad'istica: a análise do embate teórico ocorrido na
 sistemática biológica na segunda metade do século xx”. IV Seminário de
@@ -540,10 +492,7 @@ Cruz. URL:
 <p><a name=bib-Vaidya></a><a href="#cite-Vaidya">Vaidya, G., D. J. Lohman, and R.
 Meier</a> (2011). “SequenceMatrix: concatenation software
 for the fast assembly of multi-gene datasets with character set and
-codon information”. In: <em>Cladistics</em> 27.2, pp. 171-180. ISSN:
-1096-0031. DOI:
-<a href="https://doi.org/10.1111%2Fj.1096-0031.2010.00329.x">10.1111/j.1096-0031.2010.00329.x</a>.
-URL:
+codon information”. In: <em>Cladistics</em> 27.2, pp. 171-180. URL:
 <a href="https://doi.org/10.1111/j.1096-0031.2010.00329.x">https://doi.org/10.1111/j.1096-0031.2010.00329.x</a>.</p>
 <p><a name=bib-WebEvolution></a><a href="#cite-WebEvolution">Vivek Madurai</a>
 (2018). <em>Web Evolution from 1.0 to 3.0</em>. [Online; accessed
@@ -557,11 +506,12 @@ URL:
 <p><a name=bib-wikiCirculoViena></a><a href="#cite-wikiCirculoViena">Wikipedia
 contributors</a> (2022i). <em>C'irculo de Viena -
 Wikipedia,The Free Encyclopedia</em>. [Online; accessed 15-September-2022].
-URL: [<a href="https://pt.wikipedia.org/wiki/C" class="uri">https://pt.wikipedia.org/wiki/C</a></p>
+URL:
+<a href="https://pt.wikipedia.org/wiki/C%C3%ADrculo_de_Viena">https://pt.wikipedia.org/wiki/C%C3%ADrculo_de_Viena</a>.</p>
 <p><a name=bib-wikiCibernetica></a><a href="#cite-wikiCibernetica">Wikipedia
-contributors</a> (2022g). _Cibern{’_etica - Governo
-Digital. [Online; accessed 12-September-2022]. URL:
-[<a href="https://pt.wikipedia.org/wiki/Cibern" class="uri">https://pt.wikipedia.org/wiki/Cibern</a></p>
+contributors</a> (2022g). <em>CibernÃ©tica - Governo
+Digital</em>. [Online; accessed 12-September-2022]. URL:
+<a href="https://pt.wikipedia.org/wiki/Cibern%C3%A9tica">https://pt.wikipedia.org/wiki/Cibern%C3%A9tica</a>.</p>
 <p><a name=bib-wikiGO></a><a href="#cite-wikiGO">Wikipedia contributors</a> (2022d).
 <em>Gene Ontology - Wikipedia,The Free Encyclopedia</em>. [Online; accessed
 11-September-2022]. URL:
@@ -570,7 +520,7 @@ Digital. [Online; accessed 12-September-2022]. URL:
 contributors</a> (2022e).
 <em>Interoperabilidade semÃ¢ntica - Wikipedia,The Free Encyclopedia</em>.
 [Online; accessed 12-September-2022]. URL:
-[<a href="https://pt.m.wikipedia.org/wiki/Interoperabilidade\_sem" class="uri">https://pt.m.wikipedia.org/wiki/Interoperabilidade\_sem</a></p>
+<a href="https://pt.m.wikipedia.org/wiki/Interoperabilidade_sem%C3%A2ntica">https://pt.m.wikipedia.org/wiki/Interoperabilidade_sem%C3%A2ntica</a>.</p>
 <p><a name=bib-wikiTim></a><a href="#cite-wikiTim">Wikipedia contributors</a>
 (2022b). <em>Tim Berners-Lee - Wikipedia,The Free Encyclopedia</em>. [Online;
 accessed 11-September-2022]. URL:
