--- a/formatos-de-arquivo-mais-comuns.html
+++ b/formatos-de-arquivo-mais-comuns.html
@@ -425,7 +425,7 @@ GATATTTAT----------ATTTAT------ATAGATTTATA-------------TGTAT</code></pre>
 <div id="nexus" class="section level2 hasAnchor" number="6.3">
 <h2><span class="header-section-number">6.3</span> NEXUS<a href="formatos-de-arquivo-mais-comuns.html#nexus" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <ul>
-<li>Lançado em 1987 por Wayne &amp; David Maddison e David L. Swofford.</li>
+<li>Lançado em 1987 por Wayne &amp; David Maddison e David L. Swofford^(criador do PAUP)^.</li>
 </ul>
 <p><img src="images/Maddisons.jpg" /></p>
 <p><a name=cite-Maddison></a><a href="https://doi.org/10.1093/sysbio/46.4.590">Maddison, Swofford, and Maddison (1997)</a></p>
@@ -450,6 +450,10 @@ END;
 <div style="color: black; background: lightblue; text-align: justify; border: 5px outset lightgray; padding: 10px;">
 <p><img src="images/maclade.jpg" style="width:30.0%" /></p>
 <p>Maddison, W.P. &amp; Maddison, D.R., 1992. MacClade: Analysis of Phylogeny and Character Evolution. Version 3</p>
+</div>
+<div style="color: black; background: lightblue; text-align: justify; border: 5px outset lightgray; padding: 10px;">
+<p><img src="images/mesquite.png" /></p>
+<p>Maddison, W.P. &amp; Maddison, D.R., 2002. Mesquite: a modular system for evolutionary analysis. Version 0.991. <a href="http://mesquiteproject.org" class="uri">http://mesquiteproject.org</a></p>
 </div>
 </div>
 </div>
