--- a/referências.html
+++ b/referências.html
@@ -381,7 +381,7 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <h1>Referências<a href="referências.html#referências" class="anchor-section" aria-label="Anchor link to header"></a></h1>
 <p><a name=bib-Almeida_2002></a><a href="#cite-Almeida_2002">Almeida, M.</a> (2002).
 “Uma introdução ao XML, sua utilização na Internet e alguns conceitos
-complementares”. In: <em>Ci. Inf., Bras'ilia</em> 31.2, pp. 5-13.</p>
+complementares”. In: <em>Ci. Inf., Bras'</em> 31.2, pp. 5-13.</p>
 <p><a
 name=bib-TrendsandPriorities></a><a href="#cite-TrendsandPriorities">Anônimo</a>
 (1974). “Trends, Priorities, and Needs in Systematic and Evolutionary
@@ -410,8 +410,8 @@ analyzing phylogenetic diversity and community structure”. In: <em>Acta
 Botanica Brasilica</em> 31.2, pp. 191-198. URL:
 <a href="https://doi.org/10.1590/0102-33062016abb0306">https://doi.org/10.1590/0102-33062016abb0306</a>.</p>
 <p><a name=bib-Hagemann1999></a><a href="#cite-Hagemann1999">Hagemann, T. L. and S.
-Kwan</a> (1999). “ABISequencing Analysis: Manipulation
-of Sequence Data from the ABIDNASequencer”. In: <em>Molecular
+Kwan</a> (1999). “ABI Sequencing Analysis:
+Manipulation of Sequence Data from the ABIDNASequencer”. In: <em>Molecular
 Biotechnology</em> 13.2, pp. 137-152. URL:
 <a href="https://doi.org/10.1385/mb:13:2:137">https://doi.org/10.1385/mb:13:2:137</a>.</p>
 <p><a name=bib-Hall></a><a href="#cite-Hall">Hall, T. A.</a> (1999). “BioEdit: a
@@ -481,10 +481,10 @@ hennigiana: revolução ou mudança no interior de um paradigma?” In:
 <a href="https://doi.org/10.1590/S1678-31662012000300008">https://doi.org/10.1590/S1678-31662012000300008</a>.</p>
 <p><a name=bib-Souza_Alvarenga_2004></a><a href="#cite-Souza_Alvarenga_2004">Souza, R. and L.
 Alvarenga</a> (2004). “A Web Semântica e suas
-contribuições para a ciência da informação”. In: <em>Ci. Inf., Bras'ilia</em>
-33.1, pp. 132-141.</p>
+contribuições para a ciência da informação”. In: <em>Ci. Inf.,
+Bras'</em> 33.1, pp. 132-141.</p>
 <p><a name=bib-Terra2010></a><a href="#cite-Terra2010">Terra, P. S.</a> (2010). “O
-triunfo da clad'istica: a análise do embate teórico ocorrido na
+triunfo da clad': a análise do embate teórico ocorrido na
 sistemática biológica na segunda metade do século xx”. IV Seminário de
 História e Filosofia da Ciência. Bahia: Universidade Estadual de Santa
 Cruz. URL:
@@ -513,7 +513,7 @@ Wikipedia,The Free Encyclopedia</em>. [Online; accessed 10-September-2022].
 URL:
 <a href="https://en.wikipedia.org/w/index.php?title=Bioinformatics&amp;oldid=1108690744">https://en.wikipedia.org/w/index.php?title=Bioinformatics&amp;oldid=1108690744</a>.</p>
 <p><a name=bib-wikiCirculoViena></a><a href="#cite-wikiCirculoViena">Wikipedia
-contributors</a> (2022i). <em>C'irculo de Viena -
+contributors</a> (2022i). <em>C'de Viena -
 Wikipedia,The Free Encyclopedia</em>. [Online; accessed 15-September-2022].
 URL:
 <a href="https://pt.wikipedia.org/wiki/C%C3%ADrculo_de_Viena">https://pt.wikipedia.org/wiki/C%C3%ADrculo_de_Viena</a>.</p>
