--- a/montagem-de-sequências.html
+++ b/montagem-de-sequências.html
@@ -496,7 +496,7 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 </div>
 <div id="prática-1" class="section level3 hasAnchor" number="5.2.2">
 <h3><span class="header-section-number">5.2.2</span> Prática<a href="montagem-de-sequências.html#prática-1" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>Para essa atividade será preciso baixar um dos programas que realizam essa tarefa. Contudo, esses programas possuem lincenças pagas. Entretanto, as empresas oferecem um período de teste com todas as funcionalidades ativas. Sugestão para essa atividade: <code>Sequencher</code>, <code>Geneious</code> ou <code>CodonCode Aligner</code>.</p>
+<p>Para essa atividade será preciso baixar um dos programas que realizam essa tarefa. Contudo, esses programas possuem licenças pagas. Entretanto, as empresas oferecem um período de teste com todas as funcionalidades ativas. Sugestão para essa atividade: <code>Sequencher</code>, <code>Geneious</code> ou <code>CodonCode Aligner</code>.</p>
 <ul>
 <li><p>Vamos utilizar os arquivos listados abaixo, que compõem quatro <em>primers</em> sequenciados do <em>locus</em> <em>trnD-trnT</em> de um organismo desconhecido (<em>species 1</em>):</p>
 <ul>
