--- a/referências.html
+++ b/referências.html
@@ -450,6 +450,9 @@ Maddison</a> (1997). “Nexus: An Extensible File Format for
 Systematic Information”. In: <em>Systematic Biology</em> 46.4, pp. 590-621.
 URL:
 <a href="https://doi.org/10.1093/sysbio/46.4.590">https://doi.org/10.1093/sysbio/46.4.590</a>.</p>
+<p><a name=bib-Mayr1982></a><a href="#cite-Mayr1982">Mayr, E.</a> (1982). <em>The Growth
+of Biological Thought: Diversity, Evolution, and Inheritance</em>.
+Cambridge, MA: Harvard University Press.</p>
 <p><a name=bib-Muller></a><a href="#cite-Muller">Müller, K.</a> (2005). “SeqState:
 Primer Design and Sequence Statistics for Phylogenetic DNA Datasets”.
 In: <em>Applied Bioinformatics</em> 4.1, pp. 65-69. URL:
@@ -479,6 +482,9 @@ Klassa</a> (2012). “Sistemática filogenética
 hennigiana: revolução ou mudança no interior de um paradigma?” In:
 <em>Scientiae Studia [online]</em> 10.3, pp. 593-612. URL:
 <a href="https://doi.org/10.1590/S1678-31662012000300008">https://doi.org/10.1590/S1678-31662012000300008</a>.</p>
+<p><a name=bib-Schmitt2013></a><a href="#cite-Schmitt2013">Schmitt, M.</a> (1988).
+<em>From Taxonomy to Phylogenetics - Life and Work of Willi Hennig</em>.
+Leiden; Boston: Brill.</p>
 <p><a name=bib-Souza_Alvarenga_2004></a><a href="#cite-Souza_Alvarenga_2004">Souza, R. and L.
 Alvarenga</a> (2004). “A Web Semântica e suas
 contribuições para a ciência da informação”. In: <em>Ci. Inf.,
@@ -489,6 +495,10 @@ sistemática biológica na segunda metade do século xx”. IV Seminário de
 História e Filosofia da Ciência. Bahia: Universidade Estadual de Santa
 Cruz. URL:
 <a href="http://www.uesc.br/eventos/ivseminariohfc/resumos/otriunfodacladistica.pdf">http://www.uesc.br/eventos/ivseminariohfc/resumos/otriunfodacladistica.pdf</a>.</p>
+<p><a name=bib-Tremblay2013></a><a href="#cite-Tremblay2013">Tremblay, F.</a> (2013).
+“Nicolai Hartmann and the Metaphysical Foundation of Phylogenetic
+Systematics”. In: <em>Biological Theory</em> 7.1, pp. 56-68. URL:
+<a href="https://doi.org/10.1007/s13752-012-0077-8">https://doi.org/10.1007/s13752-012-0077-8</a>.</p>
 <p><a name=bib-Vaidya></a><a href="#cite-Vaidya">Vaidya, G., D. J. Lohman, and R.
 Meier</a> (2011). “SequenceMatrix: concatenation software
 for the fast assembly of multi-gene datasets with character set and
