--- a/referências.html
+++ b/referências.html
@@ -239,20 +239,20 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="9.1" data-path="concatenando-matrizes.html"><a href="concatenando-matrizes.html#prática-4"><i class="fa fa-check"></i><b>9.1</b> Prática</a></li>
 </ul></li>
 <li class="chapter" data-level="10" data-path="seleção-de-modelos-das-partições.html"><a href="seleção-de-modelos-das-partições.html"><i class="fa fa-check"></i><b>10</b> Seleção de modelos das partições</a></li>
-<li class="chapter" data-level="11" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html"><i class="fa fa-check"></i><b>11</b> Softwares para análises filogenéticas</a>
+<li class="chapter" data-level="11" data-path="softwares_filogenia.html"><a href="softwares_filogenia.html"><i class="fa fa-check"></i><b>11</b> Softwares para análises filogenéticas</a>
 <ul>
-<li class="chapter" data-level="11.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#ms-dos"><i class="fa fa-check"></i><b>11.1</b> MS-DOS</a></li>
-<li class="chapter" data-level="11.2" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#iq-tree"><i class="fa fa-check"></i><b>11.2</b> IQ-TREE</a>
+<li class="chapter" data-level="11.1" data-path="softwares_filogenia.html"><a href="softwares_filogenia.html#ms-dos"><i class="fa fa-check"></i><b>11.1</b> MS-DOS</a></li>
+<li class="chapter" data-level="11.2" data-path="softwares_filogenia.html"><a href="softwares_filogenia.html#iq-tree"><i class="fa fa-check"></i><b>11.2</b> IQ-TREE</a>
 <ul>
-<li class="chapter" data-level="11.2.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-5"><i class="fa fa-check"></i><b>11.2.1</b> Prática</a></li>
+<li class="chapter" data-level="11.2.1" data-path="softwares_filogenia.html"><a href="softwares_filogenia.html#prática-5"><i class="fa fa-check"></i><b>11.2.1</b> Prática</a></li>
 </ul></li>
-<li class="chapter" data-level="11.3" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#splitstree6"><i class="fa fa-check"></i><b>11.3</b> SplitsTree6</a>
+<li class="chapter" data-level="11.3" data-path="softwares_filogenia.html"><a href="softwares_filogenia.html#splitstree6"><i class="fa fa-check"></i><b>11.3</b> SplitsTree6</a>
 <ul>
-<li class="chapter" data-level="11.3.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-6"><i class="fa fa-check"></i><b>11.3.1</b> Prática</a></li>
+<li class="chapter" data-level="11.3.1" data-path="softwares_filogenia.html"><a href="softwares_filogenia.html#prática-6"><i class="fa fa-check"></i><b>11.3.1</b> Prática</a></li>
 </ul></li>
-<li class="chapter" data-level="11.4" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#mrbayes"><i class="fa fa-check"></i><b>11.4</b> MrBayes</a>
+<li class="chapter" data-level="11.4" data-path="softwares_filogenia.html"><a href="softwares_filogenia.html#mrbayes"><i class="fa fa-check"></i><b>11.4</b> MrBayes</a>
 <ul>
-<li class="chapter" data-level="11.4.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-7"><i class="fa fa-check"></i><b>11.4.1</b> Prática</a></li>
+<li class="chapter" data-level="11.4.1" data-path="softwares_filogenia.html"><a href="softwares_filogenia.html#prática-7"><i class="fa fa-check"></i><b>11.4.1</b> Prática</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="12" data-path="edição-final-de-árvore.html"><a href="edição-final-de-árvore.html"><i class="fa fa-check"></i><b>12</b> Edição final de árvore</a>
@@ -355,9 +355,10 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 </ul></li>
 </ul></li>
-<li class="chapter" data-level="16" data-path="genebank-ncbi.html"><a href="genebank-ncbi.html"><i class="fa fa-check"></i><b>16</b> GeneBank (NCBI)</a>
+<li class="chapter" data-level="16" data-path="exercícios.html"><a href="exercícios.html"><i class="fa fa-check"></i><b>16</b> Exercícios</a></li>
+<li class="chapter" data-level="17" data-path="genebank-ncbi.html"><a href="genebank-ncbi.html"><i class="fa fa-check"></i><b>17</b> GeneBank (NCBI)</a>
 <ul>
-<li class="chapter" data-level="16.1" data-path="genebank-ncbi.html"><a href="genebank-ncbi.html#blast"><i class="fa fa-check"></i><b>16.1</b> Blast</a></li>
+<li class="chapter" data-level="17.1" data-path="genebank-ncbi.html"><a href="genebank-ncbi.html#blast"><i class="fa fa-check"></i><b>17.1</b> Blast</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="referências.html"><a href="referências.html"><i class="fa fa-check"></i>Referências</a></li>
 </ul>
@@ -400,6 +401,11 @@ of the Missouri Botanical Garden</em> 89, pp. 127-144. URL:
 <p><a name=bib-Doyles1987></a><a href="#cite-Doyles1987">Doyle, J. and J. Doyle</a>
 (1987). “A rapid DNA isolation procedure for small quantities of fresh
 leaf tissue”. In: <em>Phytochemical Bulletin</em> 19, pp. 11-15.</p>
+<p><a name=bib-Eldredge2010></a><a href="#cite-Eldredge2010">Eldredge, N.</a> (2010).
+“How Systematics Became
+”. In: <em>Evolution:
+Education and Outreach</em> 3.4, pp. 491-494. URL:
+<a href="https://doi.org/10.1007/s12052-010-0284-3">https://doi.org/10.1007/s12052-010-0284-3</a>.</p>
 <p><a name=bib-Eshbaugh></a><a href="#cite-Eshbaugh">Eshbaugh, W. H.</a> (1995).
 “Systematics Agenda 2000: an historical perspective”. In: <em>Biodiversity
 &amp; Conservation</em> 4.5, pp. 455-462. URL:
@@ -450,6 +456,10 @@ Maddison</a> (1997). “Nexus: An Extensible File Format for
 Systematic Information”. In: <em>Systematic Biology</em> 46.4, pp. 590-621.
 URL:
 <a href="https://doi.org/10.1093/sysbio/46.4.590">https://doi.org/10.1093/sysbio/46.4.590</a>.</p>
+<p><a name=bib-Mattox2011></a><a href="#cite-Mattox2011">Mattox, G. M. T.</a> (2011).
+“Gareth Nelson: os desafios atuais e o futuro da biogeografia.” In:
+<em>Revista da Biologia</em> 7, pp. 49-55. URL:
+<a href="https://doi.org/10.7594/revbio.07.09">https://doi.org/10.7594/revbio.07.09</a>.</p>
 <p><a name=bib-Mayr1982></a><a href="#cite-Mayr1982">Mayr, E.</a> (1982). <em>The Growth
 of Biological Thought: Diversity, Evolution, and Inheritance</em>.
 Cambridge, MA: Harvard University Press.</p>
@@ -457,6 +467,10 @@ Cambridge, MA: Harvard University Press.</p>
 Primer Design and Sequence Statistics for Phylogenetic DNA Datasets”.
 In: <em>Applied Bioinformatics</em> 4.1, pp. 65-69. URL:
 <a href="https://doi.org/10.2165/00822942-200504010-00008">https://doi.org/10.2165/00822942-200504010-00008</a>.</p>
+<p><a name=bib-Nelson1974></a><a href="#cite-Nelson1974">Nelson, G.</a> (1974).
+“Darwin-Henning Classification: A Reply to Ernst Mayr”. In: <em>Systematic
+Biology</em> 23.3, pp. 452-458. URL:
+<a href="https://doi.org/10.1093/sysbio/23.3.452">https://doi.org/10.1093/sysbio/23.3.452</a>.</p>
 <p><a name=bib-Piel></a><a href="#cite-Piel">Piel, W. H., M. J. Sanderson, and M. J.
 Donoghue</a> (2003). “The small-world dynamics of tree
 networks and data mining in phyloinformatics”. In: <em>Bioinformatics</em>
@@ -482,7 +496,7 @@ Klassa</a> (2012). “Sistemática filogenética
 hennigiana: revolução ou mudança no interior de um paradigma?” In:
 <em>Scientiae Studia [online]</em> 10.3, pp. 593-612. URL:
 <a href="https://doi.org/10.1590/S1678-31662012000300008">https://doi.org/10.1590/S1678-31662012000300008</a>.</p>
-<p><a name=bib-Schmitt2013></a><a href="#cite-Schmitt2013">Schmitt, M.</a> (1988).
+<p><a name=bib-Schmitt2013></a><a href="#cite-Schmitt2013">Schmitt, M.</a> (2013).
 <em>From Taxonomy to Phylogenetics - Life and Work of Willi Hennig</em>.
 Leiden; Boston: Brill.</p>
 <p><a name=bib-Souza_Alvarenga_2004></a><a href="#cite-Souza_Alvarenga_2004">Souza, R. and L.
