--- a/softwares-para-análises-filogenéticas.html
+++ b/softwares-para-análises-filogenéticas.html
@@ -355,9 +355,10 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 </ul></li>
 </ul></li>
-<li class="chapter" data-level="16" data-path="genebank-ncbi.html"><a href="genebank-ncbi.html"><i class="fa fa-check"></i><b>16</b> GeneBank (NCBI)</a>
+<li class="chapter" data-level="16" data-path="exercícios.html"><a href="exercícios.html"><i class="fa fa-check"></i><b>16</b> Exercícios</a></li>
+<li class="chapter" data-level="17" data-path="genebank-ncbi.html"><a href="genebank-ncbi.html"><i class="fa fa-check"></i><b>17</b> GeneBank (NCBI)</a>
 <ul>
-<li class="chapter" data-level="16.1" data-path="genebank-ncbi.html"><a href="genebank-ncbi.html#blast"><i class="fa fa-check"></i><b>16.1</b> Blast</a></li>
+<li class="chapter" data-level="17.1" data-path="genebank-ncbi.html"><a href="genebank-ncbi.html#blast"><i class="fa fa-check"></i><b>17.1</b> Blast</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="referências.html"><a href="referências.html"><i class="fa fa-check"></i>Referências</a></li>
 </ul>
